--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="/FaviconOriginal.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>The Creek ~ Motlow Creek Baptist Church</title>
+    <!--SEO Meta Tags-->
+    <meta name="title" content="The Creek ~ Motlow Creek Baptist Church" />
+    <meta name="description" content="Motlow Creek Baptist Church is where Faith Grows and Hearts Connect, a Christian Fellowship. We are a southern Baptist church located in Gownsville, (campobello), SC. Join us for Bible study, Sunday School, and more." />
+    <meta name="keywords" content="The Creek, Motlow Creek Baptist Church, Motlow Creek, Motlow Community, Baptist, Baptist Church, Gownsville, Campobello, Christian Fellowship, Sunday School, Sunday School Classes, Church, Blessings, Blessings Box" />
+    <meta name="author" content="Data Point Solutions: Heath Babb" />
   </head>
   <body>
     <div id="root"></div>
